--- a/package.json
+++ b/package.json
@@ -13,16 +13,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.1.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.1.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-idle/core": "^2.0.0-beta.13",
+    "@ng-idle/keepalive": "^2.0.0-beta.13",
+    "angular2-cookie": "^1.2.6",
+    "angular2-datatable": "^0.6.0",
+    "angular2-moment": "^1.8.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "moment": "^2.20.1",
+    "ng2-cookies": "^1.0.12",
+    "ng2-filter-pipe": "^0.1.10",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-pagination": "^2.0.2",
+    "ng2-search-filter": "^0.3.1",
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
@@ -43,6 +57,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-idle": "^1.0.0-alpha.18",
+    "ng2-idle-keepalive": "^1.0.0-alpha.10",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
