--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.0.0",
     "@ng-idle/core": "^2.0.0-beta.13",
     "@ng-idle/keepalive": "^2.0.0-beta.13",
+    "angular-tslint-rules": "^1.2.1",
     "angular2-cookie": "^1.2.6",
     "angular2-datatable": "^0.6.0",
     "angular2-moment": "^1.8.0",
@@ -37,6 +38,7 @@
     "ng2-pagination": "^2.0.2",
     "ng2-search-filter": "^0.3.1",
     "ng2-translate": "^5.0.0",
+    "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -62,7 +64,8 @@
     "ng2-idle-keepalive": "^1.0.0-alpha.10",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "tslint": "^5.7.0",
+    "tslint-webpack-plugin": "^1.2.0",
     "typescript": "~2.4.2"
   }
 }
