--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.2.1",
     "ng2-cookies": "^1.0.12",
     "ng2-filter-pipe": "^0.1.10",
+    "ng2-keepalive": "0.0.8",
     "ng2-order-pipe": "^0.1.5",
     "ng2-pagination": "^2.0.2",
     "ng2-search-filter": "^0.3.1",
