--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng2-translate": "^5.0.0",
     "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.2",
+    "ts-xlsx": "0.0.11",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
